example/lib/src/l10n/errors/app_zu.arb
{
  "@@locale": "zu",
  "error": "Kwenzekile iphutha",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Kwenzekile iphutha elingalindelekile",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Umbiko wephutha uthunyelwe ngempumelelo.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}